--- a/blog.html
+++ b/blog.html
@@ -350,7 +350,7 @@
                                 <img class="img-responsive img-centered" src="img/gallery/GithubTutorial/repository.png" alt="">
                                 <p>The moment you have been waiting for: viewing your website. To do this simply type in 'username.github.io' into your search box. Behold, your website. That's the address for your website, so go ahead and share it to everyone.</p>
                                 <h4>Making Changes to your Website</h4>
-                                <p>This is what makes GitHub ideal for implementing fixes. Simply edit or files to your username.github.io folder. Then in the terminal, once you've navigated to the folder, type:</p>
+                                <p>This is what makes GitHub ideal for implementing fixes. Simply edit your files in your username.github.io folder. Then in the terminal, once you've navigated to the folder, type:</p>
                                 <pre>git add .</pre>
                                 <pre>git commit -m "your message"</pre>
                                 <pre>git push origin master</pre>
