--- a/index.html
+++ b/index.html
@@ -246,6 +246,20 @@
                         <p class="text-muted">IT Intern Project</p>
                     </div>
                 </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/DavyJones_preview.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Davy Jones - Pirates</h4>
+                        <p class="text-muted">Drawing</p>
+                    </div>
+                </div>
             </div>
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -792,6 +806,35 @@
             </div>
         </div>
     </div>
+    
+    <!-- Portfolio Modal 5 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Davy Jones</h2>
+                            <p class="item-intro text-muted">Drawing of Pirates of the Caribbean</p>
+                            <img class="img-responsive img-centered" src="img/portfolio/DavyJones.png" alt="">
+                            <p>This is a drawing of Davy Jones from the Pirates of the Caribbean series. I drew this a long time ago, but I really enjoyed it. So now it's on here.</p>
+                            <ul class="list-inline">
+                                <li><strong>Date:</strong> May 8 2010</li>
+                            </ul>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- gallery modal 1 -->
     <div class="portfolio-modal modal fade" id="galleryModal1" tabindex="-1" role="dialog" aria-hidden="true">
@@ -945,11 +988,11 @@
                                 <pre>git commit -m "blah blah blah"</pre>
                                 <p>You can enter your message in between the quotation marks. So now we can push our code to the repository. To do this, type:</p>
                                 <pre>git push origin master</pre>
-                                <p>Once you enter this, you should be prompted for your username and password. Enter these in, and you should be good to go!Wait for the success message to display, and go check your repository to see your newly-added files.</p>
+                                <p>Once you enter this, you should be prompted for your username and password. Enter these in, and you should be good to go! Wait for the success message to display, and go check your repository to see your newly-added files.</p>
                                 <img class="img-responsive img-centered" src="img/gallery/GithubTutorial/repository.png" alt="">
                                 <p>The moment you have been waiting for: viewing your website. To do this simply type in 'username.github.io' into your search box. Behold, your website. That's the address for your website, so go ahead and share it to everyone.</p>
                                 <h4>Making Changes to your Website</h4>
-                                <p>This is what makes GitHub ideal for implementing fixes. Simply edit or files to your username.github.io folder. Then in the terminal, once you've navigated to the folder, type:</p>
+                                <p>This is what makes GitHub ideal for implementing fixes. Simply edit your files in your username.github.io folder. Then in the terminal, once you've navigated to the folder, type:</p>
                                 <pre>git add .</pre>
                                 <pre>git commit -m "your message"</pre>
                                 <pre>git push origin master</pre>
