--- a/portfolio.html
+++ b/portfolio.html
@@ -149,6 +149,20 @@
                         <p class="text-muted">IT Intern Project</p>
                     </div>
                 </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/DavyJones_preview.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Davy Jones - Pirates</h4>
+                        <p class="text-muted">Drawing</p>
+                    </div>
+                </div>
             </div>
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -300,6 +314,35 @@
                             <p>As a member of the Design team, I took the information gathered through the interviews and surveys conducted by the Interview team, and made an initial mockup of the new website. The old OCD was notorious for having too many field and small text, so we trimmed down the intitial fields to the most commonly used. We also created an 'advanced search' button to hide all the rarely used search fields. We changed the overall look of the OCD to make it more similar to the current Amway Intranet. We changed the size of the fields and buttons to make it easier to use. The emphasis on the color red changed to shades of blue. We also added a picture of the Amway Grand Plaza in downtown Grand Rapids to add to the Amway spirit and culture. I used Adobe Photoshop to make the many iterations of the mock-up.</p>
                             <p>As a member of the Development team, we implemented the design of the mock-up. My role was as a front-end developer. I mainly worked with HTML, CSS, and Bootstrap 3. Bootstrap helped to make our website responsive and mobile friendly. I would recieve basic html from the back-end developer and basically make it look pretty. Since we had only one virtual machine to run our code, we had to work in sessions, using lean techniques like partner programming.</p>
                             <p>Overall, I learned a lot about the Agile design process and about web development. Our prototype is currently being moved into production (which I'm really proud of) and will be taken over by Amway employees after the interns leave this summer.</p>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <!-- Portfolio Modal 5 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Davy Jones</h2>
+                            <p class="item-intro text-muted">Drawing of Pirates of the Caribbean</p>
+                            <img class="img-responsive img-centered" src="img/portfolio/DavyJones.png" alt="">
+                            <p>This is a drawing of Davy Jones from the Pirates of the Caribbean series. I drew this a long time ago, but I really enjoyed it. So now it's on here.</p>
+                            <ul class="list-inline">
+                                <li><strong>Date:</strong> May 8 2010</li>
+                            </ul>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
