--- a/portfolio.html
+++ b/portfolio.html
@@ -163,6 +163,20 @@
                         <p class="text-muted">Drawing</p>
                     </div>
                 </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/IASAMemberTeesPreview.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>IASA T-Shirt Design</h4>
+                        <p class="text-muted">Graphic Design</p>
+                    </div>
+                </div>
             </div>
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -343,6 +357,32 @@
                             <ul class="list-inline">
                                 <li><strong>Date:</strong> May 8 2010</li>
                             </ul>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <!-- Portfolio Modal 6 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>IASA Membership T-Shirt</h2>
+                            <p class="item-intro text-muted">T-Shirt Design</p>
+                            <img class="img-responsive img-centered" src="img/portfolio/IASAMemberTees.png" alt="">
+                            <p>This is my design for the Indian American Student Association Membership Tees. This was made using Adobe Photoshop and Adobe Illustrator. I was given constraints such as limited number of colors and no gradients in order to reduce the cost of the shirts.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
