--- a/blog.html
+++ b/blog.html
@@ -381,7 +381,7 @@
                         <div class="modal-body" style="text-align:center">
                             <!-- Project Details Go Here -->
                             <h2>Colophon</h2>
-                            <p>This website was made using the <a href="http://startbootstrap.com/template-overviews/agency/">Agency theme</a>. The galley was made using open-source code from <a href="http://www.jssor.com/">Jssor Slider</a>. I highly suggest visiting these sites for themes and modules to embed into your code. If you believe that I have used your code/content and have not cited you, feel free to contact me and I will make the appropriate changes.</p>
+                            <p>This website was made using the <a href="http://startbootstrap.com/template-overviews/agency/">Agency theme</a>. The gallery was made using open-source code from <a href="http://www.jssor.com/">Jssor Slider</a>. I highly suggest visiting these sites for themes and modules to embed into your code. If you believe that I have used your code/content and have not cited you, feel free to contact me and I will make the appropriate changes.</p>
                             <br>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Colophon</button>
                         </div>
