--- a/index.html
+++ b/index.html
@@ -286,6 +286,20 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal11" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/u2h_web_preview.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>U2H Website</h4>
+                        <p class="text-muted">Website</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal7" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -741,11 +755,37 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>Davy Jones</h2>
-                            <p class="item-intro text-muted">Rent Tap</p>
+                            <h2>Rent Tap</h2>
+                            <p class="item-intro text-muted">User Interface Prototype</p>
                             <img class="img-responsive img-centered" src="img/portfolio/rent.png" alt="">
                             <p>This is a prototype UI that I designed for a Rent Sharing app that we were considering making. This was done during MHacks (the Hackathon at Michigan). I used Sketch 3 to make these workflows.</p>
                             <p>This app was designed to be a tool for roommates to easily organize paying for rent and other expenses. I made the layouts for 4 screens: the login page, the main profile page, the payment page, and the settings page. The profile page shows all the payments that must be made within "Apartment #304." The user can maintain several of these pages by simply swiping left or right. All the payment elements are in orange and all the charge elements are in blue.</p>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <!-- Portfolio Modal 11 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal11" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>U2H Website</h2>
+                            <p class="item-intro text-muted">Website</p>
+                            <img class="img-responsive img-centered" src="img/portfolio/u2h_web.png" alt="">
+                            <p>I made the website for the United 2 Heal organization at the University of Michigan. This was done through HTML, CSS, Javascript, and the use of Bootstrap templates.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
