--- a/index.html
+++ b/index.html
@@ -306,10 +306,10 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/IASAMemberTeesPreview.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/portfolio_proto_preview.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>IASA T-Shirt Design</h4>
+                        <h4>Portfolio Design</h4>
                         <p class="text-muted">Graphic Design</p>
                     </div>
                 </div>
