--- a/index.html
+++ b/index.html
@@ -585,10 +585,11 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>IASA Membership T-Shirt</h2>
-                            <p class="item-intro text-muted">T-Shirt Design</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/IASAMemberTees.png" alt="">
-                            <p>This is my design for the Indian American Student Association Membership Tees. This was made using Adobe Photoshop and Adobe Illustrator. I was given constraints such as limited number of colors and no gradients in order to reduce the cost of the shirts.</p>
+                            <h2>Portfolio Design</h2>
+                            <p class="item-intro text-muted">Mockup</p>
+                            <img class="img-responsive img-centered" src="img/portfolio/portfolio_mobi.png" alt="">
+                            <p>This is my design for a revamped portfolio site. Featured above is the mobile version of the website. Below is the full one page website. I tried to keep a minimalistic design relying on four colors with square harmony balancd with achromatic colors.</p>
+                            <img class="img-responsive img-centered" src="img/portfolio/portfolio.png" alt="">
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
