--- a/portfolio.html
+++ b/portfolio.html
@@ -235,14 +235,13 @@
                     <!-- end single work -->
                     
                     <!-- single work -->
-                    <div class="col-md-4 col-sm-6 graphics UX">
+                    <div class="col-md-4 col-sm-6 UX">
                         <a href="single-project.html" class="portfolio_item">
                             <img src="img/portfolio/320portfolio_preview.png" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
                                 <div class="portfolio-border clearfix">
                                     <div class="item_info">
                                         <span>Portfolio Concept</span>
-                                        <em>Graphics</em>
                                         <em>UX</em>
                                     </div>
                                 </div>
