--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Nishal Nandigam's Portfolio</title>
+    <title>Box personal portfolio Template</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -61,20 +61,9 @@
         <!-- nav -->
         <nav>
             <ul class="box-primary-nav">
-                <li class="box-label">About me</li>
-
-                <li><a href="index.html">Intro</a></li>
-                <li><a href="about.html">About me</a></li>
-                <li><a href="portfolio.html">portfolio</a></li>
-                <li><a href="contact.html">contact me</a> <i class="ion-ios-circle-filled color"></i></li>
-
-
-
-                <li class="box-label">Follow me</li>
-
-                <li class="box-social"><a href="https://www.facebook.com/nnandigam23" target="_blank"><i class="fab fa-facebook-square fa-sm"></i></a></li>
-                <li class="box-social"><a href="https://www.instagram.com/nnandigam23/" target="_blank"><i class="fab fa-instagram fa-sm"></i></a></li>
-                <li class="box-social"><a href="https://www.linkedin.com/in/nishalnandigam" target="_blank"><i class="fab fa-linkedin fa-sm"></i></a></li>
+                <li><a href="index.html">Work</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a><i class="ion-ios-circle-filled color"></i></li>
             </ul>
         </nav>
         <!-- end nav -->
@@ -84,7 +73,6 @@
     <!-- top bar -->
     <div class="top-bar">
         <h1>contact Me</h1>
-        <p><a href="#">Home</a> / Contact Me</p>
     </div>
     <!-- end top bar -->
 
@@ -130,7 +118,7 @@
             <div class="h-30"></div>
             <p>Hey all, here's where you can contact me about anything. Just leave me a message and I'll be sure to get back to you.  </p>
             <div class="contact-info">
-                <p><i class="ion-android-call"></i> <a href="tel:+1-616-328-7352">(616) 328 7352</a></p>
+                <p><i class="fab fa-linkedin fa-sm"></i> <a href="https://www.linkedin.com/in/nishalnandigam">LinkedIn</a></p>
                 <p><i class="ion-ios-email"></i> <a href="mailto:nishal.nandigam@gmail.com">nishal.nandigam@gmail.com</a></p>
             </div>
         </div>
@@ -141,22 +129,8 @@
 
     <!-- footer -->
     <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; NISH 2018</span>
-                </div>
-                <div class="col-md-4">
-                    <ul class="list-inline social-buttons">
-                        <li><a href="https://www.facebook.com/nnandigam23" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                        </li>
-                        <li><a href="https://instagram.com/nnandigam23/" target="_blank"><i class="fab fa-instagram"></i></a>
-                        </li>
-                        <li><a href="https://www.linkedin.com/pub/nishal-nandigam/ab/523/35a" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+        <div class="container-fluid">
+            <p class="copyright">© Box Portfolio 2016</p>
         </div>
     </footer>
     <!-- end footer -->
