--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Nishal Nandigam's Portfolio</title>
+    <title>Box personal portfolio Template</title>
     <link rel="icon" href="img/fav.png" type="image/x-icon">
 
     <!-- Bootstrap -->
@@ -235,13 +235,14 @@
                     <!-- end single work -->
                     
                     <!-- single work -->
-                    <div class="col-md-4 col-sm-6 UX">
+                    <div class="col-md-4 col-sm-6 graphics UX">
                         <a href="single-project.html" class="portfolio_item">
                             <img src="img/portfolio/320portfolio_preview.png" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
                                 <div class="portfolio-border clearfix">
                                     <div class="item_info">
                                         <span>Portfolio Concept</span>
+                                        <em>Graphics</em>
                                         <em>UX</em>
                                     </div>
                                 </div>
@@ -249,7 +250,22 @@
                         </a>
                     </div>
                     <!-- end single work -->
-                    
+
+                    <!-- single work -->
+                    <div class="col-md-4 col-sm-6 web">
+                        <a href="single-project.html" class="portfolio_item">
+                            <img src="img/portfolio/BSM_Poster_preview.png" alt="image" class="img-responsive" />
+                            <div class="portfolio_item_hover">
+                                <div class="portfolio-border clearfix">
+                                    <div class="item_info">
+                                        <span>Global BSM Project</span>
+                                        <em>Web</em>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <!-- end single work -->
 
                     <!-- single work -->
                     <div class="col-md-4 col-sm-6 web">
