resume and contact

--- a/contact.html
+++ b/contact.html
@@ -62,8 +62,8 @@
         <nav>
             <ul class="box-primary-nav">
                 <li><a href="index.html">Work</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a><i class="ion-ios-circle-filled color"></i></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="contact.html">Contact</a><i class="ion-ios-circle-filled color size-15"></i></li>
             </ul>
         </nav>
         <!-- end nav -->
@@ -72,13 +72,13 @@
 
     <!-- top bar -->
     <div class="top-bar">
-        <h1>contact Me</h1>
+        <h1>contact</h1>
     </div>
     <!-- end top bar -->
 
     <!-- main-container -->
     <div class="container main-container">
-        <div class="col-md-6">
+        <div class="col-md-6 col-centered">
             <form action="https://formspree.io/nishal.nandigam@gmail.com" method="post">
                 <div class="row">
                     <div class="col-md-6">
@@ -105,25 +105,16 @@
                             <span>message</span>
                         </div>
                     </div>
-                    <div class="col-md-12">
+                    <div class="col-xs-6">
                         <button type="submit" class="btn btn-box">Send</button>
+                    </div>
+                    <div class="col-xs-6">
+                        <div class="h-30"></div>
+                        <span class="pull-right"><p>or contact me on <a href="https://www.linkedin.com/in/nishalnandigam">LinkedIn</a></p></span>
                     </div>
                 </div>
             </form>
         </div>
-
-        <div class="col-md-6">
-            <h3 class="text-uppercase">contact me</h3>
-            <h5>Nishal Nandigam</h5>
-            <div class="h-30"></div>
-            <p>Hey all, here's where you can contact me about anything. Just leave me a message and I'll be sure to get back to you.  </p>
-            <div class="contact-info">
-                <p><i class="fab fa-linkedin fa-sm"></i> <a href="https://www.linkedin.com/in/nishalnandigam">LinkedIn</a></p>
-                <p><i class="ion-ios-email"></i> <a href="mailto:nishal.nandigam@gmail.com">nishal.nandigam@gmail.com</a></p>
-            </div>
-        </div>
-
-
     </div>
     <!-- end main-container -->
 
