--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <!-- nav -->
         <nav>
             <ul class="box-primary-nav">
-                <li><a href="index.html">Work</a><i class="ion-ios-circle-filled color"></i></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="index.html">Work</a><i class="ion-ios-circle-filled color size-15"></i></li>
+                <li><a href="resume.html">Resume</a></li>
                 <li><a href="contact.html">Contact </a></li>
             </ul>
         </nav>
@@ -395,7 +395,7 @@
             
         </div>
         <div class="clearfix center" style="padding-top:50px;">
-                <a href="contact.html" class="btn btn-box">Contact me</a>
+            <a href="contact.html" class="btn btn-box">Contact me</a>
         </div>
     </div>
 
