added target for linkedin link

--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
                     </div>
                     <div class="col-xs-6">
                         <div class="h-30"></div>
-                        <span class="pull-right"><p>or contact me on <a href="https://www.linkedin.com/in/nishalnandigam">LinkedIn</a></p></span>
+                        <span class="pull-right"><p>or contact me on <a href="https://www.linkedin.com/in/nishalnandigam" target="_blank">LinkedIn</a></p></span>
                     </div>
                 </div>
             </form>
