--- a/resume.html
+++ b/resume.html
@@ -74,15 +74,17 @@
     <!-- end top bar -->
     
     <!-- Main container -->
-    <div class="container main-container"> 
-        <div class="col-md-8">
+    <div class="container main-container">
+        <div class="col-md-10 col-centered">
+        <div class="col-md-7">
             <h3>Nishal Nandigam</h3>
             <h5>UX DESIGNER</h5>
             <div class="h-20"></div>
             <a target="_blank" href="pdf/nishal_resume.pdf">Download a PDF</a>
             <div class="h-60"></div>
         </div>
-        <div class="col-md-4 hidden-sm hidden-xs">
+        <div class="col-md-5 hidden-sm hidden-xs">
+            <div class="h-20"></div>
             <img src="img/nishal.jpg" id="hidden" class="img-responsive" alt="" />
         </div>
         <div class="col-sm-12">
@@ -177,6 +179,7 @@
             <strong>Web Design</strong>
             <p>HTML<br/>CSS<br/>Javascript</p>
             <div class="h-20"></div>
+        </div>
         </div>
     </div>
     
