added target for linkedin link

--- a/resume.html
+++ b/resume.html
@@ -74,7 +74,7 @@
     <!-- end top bar -->
     
     <!-- Main container -->
-    <div class="container main-container">
+    <div class="container main-container clearfix">
         <div class="col-md-10 col-centered">
         <div class="col-md-7">
             <h3>Nishal Nandigam</h3>
