--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,8 @@
 
     <!-- main css -->
     <link href="css/style.css" rel="stylesheet">
-    
+    <!-- feather icons -->
+    <link href="feather/feather.css" rel="stylesheet" type="text/css">
     <!-- custom css -->
     <link href="fontawesome/css/fontawesome-all.css" rel="stylesheet">
 
@@ -59,7 +60,8 @@
         <!-- nav -->
         <nav>
             <ul class="box-primary-nav">
-                <li><a href="index.html">Work</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="resume.html">Resume</a><i class="ion-ios-circle-filled color size-15"></i></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -167,7 +169,7 @@
         </div>
         <div class="col-sm-2">
             <strong>Prototyping</strong>
-            <p>Invision Studio<br/>Flinto<br/>Keynote</p>
+            <p>Invision Studio<br/>Protopie<br/>Keynote</p>
             <div class="h-20"></div>
         </div>
         <div class="col-sm-2">
