--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,8 @@
     
     <!-- custom css -->
     <link href="fontawesome/css/fontawesome-all.css" rel="stylesheet">
-
+    <!-- feather icons -->
+    <link href="feather/feather.css" rel="stylesheet" type="text/css">
 
     <!-- modernizr -->
     <script src="js/modernizr.js"></script>
@@ -61,7 +62,8 @@
         <!-- nav -->
         <nav>
             <ul class="box-primary-nav">
-                <li><a href="index.html">Work</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="resume.html">Resume</a></li>
                 <li><a href="contact.html">Contact</a><i class="ion-ios-circle-filled color size-15"></i></li>
             </ul>
