--- a/portfolios/desktop-customer-service-chat.html
+++ b/portfolios/desktop-customer-service-chat.html
@@ -188,7 +188,7 @@
             <div class="h-30"></div>
             <div class="h-60"></div>
             <h4>Concept validation</h4>
-            <p>Before we launched this experience, we wanted to conduct a concept validation with Amazon customers to identify if there were any CX pain points that we had overlooked. With the help of our Front-end Engineering team, I created a prototype that mixed click-through Invision prototypes with live code. After 10 sessions with customers, we identified opportunitis for bettering the experience, but nothing large enough to be a blocker.</p>
+            <p>Before we launched this experience, we wanted to conduct a concept validation with Amazon customers to identify if there were any CX pain points that we had overlooked. With the help of our Front-end Engineering team, I created a prototype that mixed click-through Invision prototypes with live code. After 10 sessions with customers, we identified opportunities for bettering the experience, but nothing large enough to be a blocker.</p>
             <div class="h-60"></div>
             <div class="h-60"></div>
         </div>
